trying to add Spring security

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
 </head>
-<body>
-<form action="/login/process" method="post">
-<div>
-    Username: <input name="username" type="text">
-</div>
-<div>
-    Password <input name="password" type="password">
-</div>
-<input type="submit">
+<h3>Enter user name and password:</h3>
+<form name='f' th:action="@{/j_spring_security_check}" method='POST'>
+    <table>
+        <tr>
+            <td>User:</td>
+            <td><input type='text' name='username' value=''></td>
+        </tr>
+        <tr>
+            <td>Password:</td>
+            <td><input type='password' name='password' /></td>
+        </tr>
+        <tr>
+            <td>Remember Me?</td>
+            <td><input type="checkbox" name="remember-me" /></td>
+        </tr>
+        <tr>
+            <td><input name="submit" type="submit" value="submit" /></td>
+        </tr>
+    </table>
 </form>
+
 </body>
 </html>
