--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
+
 <head>
     <meta charset="UTF-8">
     <title>PIZZA TIIIIIME!</title>
 </head>
 <body>
-<table>
+<div class="form-body">
+<table class="product-container">
     <caption PIZZAS FOR YOU></caption>
 <thead>
 <tr>
@@ -24,5 +27,6 @@
 </tr>
 </tbody>
 </table>
+</div>
 </body>
 </html>
