--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Registration</title>
 </head>
 <body>
+<div class="form-body">
+<form class="signup-form" action="/registration" th:object="${user}" method="post">
+    <h1> Registration </h1>
+    <label for="username">Username</label>
+    <input type="text" th:field="*{username}" id="username" class="form-input">
+    <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Such username already exists!</p>
+    <label for="password">Password</label>
+    <input type="text" th:field="*{password}" id="password" class="form-input">
+    <label for="firstName">First name</label>
+    <input type="text" th:field="*{firstName}" id="firstName" class="form-input">
+    <label for="secondName">Second name</label>
+    <input type="text" th:field="*{secondName}" id="secondName" class="form-input">
+    <label for="email">Email</label>
+    <input type="text" th:field="*{email}" id="email" class="form-input">
+
+<input class="button" type="submit" value="Register">
+</form>
+</div>
 
 </body>
 </html>
