Spring security works great, trying to figure out how to make a shopping cart and show pictures from the db...

--- a/src/main/resources/templates/pizza-list.html
+++ b/src/main/resources/templates/pizza-list.html
@@ -20,7 +20,7 @@
 </tr>
 </thead>
     <tbody>
-    <tr th:each="pizza : ${pizzaList}">
+    <tr th:each="pizza : ${pizzas}">
         <td th:text="${pizza.name}"></td>
         <td th:text="${pizza.price}"></td>
         <td th:text="${pizza.size}"></td>
