--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -36,3 +36,38 @@ html {
     background:linear-gradient(to right, #ffffff 0%, #fafafa 50%, #ffffff 99%);
     border-radius: 10px;
 }
+.menu {
+    width: 80%;
+    background-color: #333;
+}
+.menu ul{
+    margin: 0; padding: 0;
+  }
+
+.menu ul li{
+    display: inline;}
+
+.menu ul li a{
+    text-align: center;
+    float: left; text-decoration: none;
+    color: white;
+    padding: 10.5px 11px;
+    background-color: #333; }
+
+.menu ul li a:visited{
+    color: white;}
+
+.menu ul li a:hover, .menu ul li .current{
+    color: #fff;
+    background-color:#0b75b2;
+
+}
+.top-image{
+    height: 10%;
+    width: 80%;
+}
+.logout-button{
+    float: right;
+    padding: 10px 25px;
+    background-color: red;
+}
