--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"   xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
     <title>Your menu is here!</title>
 </head>
-<body>
+<body class="form-body">
+<table class="product-container">
+    <thead>
+    <tr>
+        <td>Name</td>
+        <td>Price</td>
+        <td>Size</td>
+        <td>Remove</td>
+    </tr>
+    </thead>
+    <tr th:each="product : ${sessionCart}">
+        <td th:text="${product.key.name}"></td>
+        <td th:text="${product.key.price}"></td>
+        <td th:text="${product.key.size}"></td>
+
+
+    </tr>
+</table>
+
 
 </body>
 </html>
