--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>Login Page</title>
 </head>
 <h3>Enter user name and password:</h3>
-<form name='f' th:action="@{/j_spring_security_check}" method='POST'>
+<form name='f' th:action="@{/login}" method='POST'>
     <table>
         <tr>
             <td>User:</td>
