--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"   xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+
 <link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
 
 <head>
@@ -7,10 +8,29 @@
     <title>PIZZA TIIIIIME!</title>
 </head>
 <body>
+
+<img class="top-image" src="/static/images/pizzahot.png" ></div>
 <div class="form-body">
+    <div class="menu">
+        <ul>
+            <li><a href="/main">Home</a></li>
+            <li><a href="/registration">Registration</a></li>
+            <li><a href="/drink-selection">Our Drinks!</a></li>
+            <li><a href="/pizzas">Our HOT Pizzas!</a></li>
+            <li><a sec:authorize="hasRole('ADMIN')" href="/admin/user-list"> Admin page</a> </li>
+            <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a> </li>
+             <li><form method="post" th:action="@{/logout}">
+                    <button sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
+                </form></li>
+
+
+        </ul>
+        <br style="clear:left"/>
+    </div>
 <table class="product-container">
     <caption PIZZAS FOR YOU></caption>
 <thead>
+
 <tr>
     <th>Name</th>
     <th>Price</th>
@@ -19,7 +39,8 @@
 </tr>
 </thead>
 <tbody>
-<tr th:each="pizza : ${pizzaList}">
+
+<tr th:each="pizza : ${pizzas}">
     <td th:text="${pizza.name}"></td>
     <td th:text="${pizza.price}"></td>
     <td th:text="${pizza.size}"></td>
@@ -27,6 +48,7 @@
 </tr>
 </tbody>
 </table>
+
 </div>
 </body>
 </html>
