--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<img class="top-image" src="/static/images/pizzahot.png" ></div>
+<img class="top-image" src="../static/images/pizzahot.png"  th:src="@{images/pizzahot.png}"/>
 <div class="form-body">
     <div class="menu">
         <ul>
@@ -17,7 +17,7 @@
             <li><a href="/registration">Registration</a></li>
             <li><a href="/drink-selection">Our Drinks!</a></li>
             <li><a href="/pizzas">Our HOT Pizzas!</a></li>
-            <li><a sec:authorize="hasRole('ADMIN')" href="/admin/user-list"> Admin page</a> </li>
+            <li><a sec:authorize="hasRole('ADMIN')" href="/admin"> Admin page</a> </li>
             <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a> </li>
              <li><form method="post" th:action="@{/logout}">
                     <button sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
@@ -35,6 +35,7 @@
     <th>Name</th>
     <th>Price</th>
     <th>Size</th>
+    <th>Picture</th>
     <th>Description</th>
 </tr>
 </thead>
@@ -44,6 +45,7 @@
     <td th:text="${pizza.name}"></td>
     <td th:text="${pizza.price}"></td>
     <td th:text="${pizza.size}"></td>
+    <img class="product-image" th:src="@{'data:/images;base64,' + ${pizza.image}}" />
     <td th:text="${pizza.description}"></td>
 </tr>
 </tbody>
