Pizza editor working now :)

--- a/src/main/resources/templates/pizza-list.html
+++ b/src/main/resources/templates/pizza-list.html
@@ -5,11 +5,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>List of Pizzas to redact</title>
-
-
+    <title>PIZZA TIIIIIME!</title>
 </head>
 <body>
+<img class="top-image" src="../static/images/pizzahot.png"  th:src="@{images/pizzahot.png}"/>
 <div class="menu">
     <ul>
         <li><a href="/main">Home</a></li>
