--- a/src/main/resources/templates/drink-list.html
+++ b/src/main/resources/templates/drink-list.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"   xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
@@ -6,26 +7,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-
 <body>
-<div class="form-body">
-
-<img class="top-image" src="../static/images/pizzahot.png" th:src="@{static/images/pizzahot.png}" alt="there should be logo"/>
 <div class="menu">
     <ul>
         <li><a href="/main">Home</a></li>
         <li><a href="/registration">Registration</a></li>
         <li><a href="/drink-selection">Our Drinks!</a></li>
         <li><a href="/pizzas">Our HOT Pizzas!</a></li>
-        <li><a sec:authorize="hasRole('ADMIN')" href="/admin/user-list"> Admin page</a></li>
-        <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a></li>
-        <li>
-            <form method="post" th:action="@{/logout}">
-                <button sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
-            </form>
-        </li>
-
-
+        <li><a sec:authorize="hasRole('ADMIN')" href="/admin/user-list"> Admin page</a> </li>
+        <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a> </li>
+        <li><form method="post" th:action="@{/logout}">
+            <button sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
+        </form></li>
     </ul>
     <br style="clear:left"/>
 </div>
@@ -49,7 +42,7 @@
         <td th:text="${drink.name}"></td>
         <td th:text="${drink.price}"></td>
         <td th:text="${drink.size}"></td>
-        <td class="product-image"  img th:src="${drink.picturelink}"></td>
+        <td class="product-image"  img th:src="${drink.pictureLink}"></td>
         <td th:text="${drink.description}"></td>
         <td><a th:href="@{deleteDrinkById/{id}(id=${drink.id})}">Delete</a></td>
         <td><a th:href="@{updateDrinkById/{id}(id=${drink.id})}">Edit</a></td>
