--- a/src/main/resources/templates/drink-selection.html
+++ b/src/main/resources/templates/drink-selection.html
@@ -17,6 +17,7 @@
             <li><a href="/registration">Registration</a></li>
             <li><a href="/drink-selection">Our Drinks!</a></li>
             <li><a href="/pizzas">Our HOT Pizzas!</a></li>
+            <li><a href="/shoppingCart">Shopping cart</a> </li>
             <li><a sec:authorize="hasRole('ADMIN')" href="/admin"> Admin page</a> </li>
             <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a> </li>
             <li><form method="post" th:action="@{/logout}">
