--- a/src/main/resources/templates/edit-pizza.html
+++ b/src/main/resources/templates/edit-pizza.html
@@ -24,7 +24,8 @@
 
             <label for="description">Description</label>
             <input type="text" th:field="*{description}" id="description" class="form-input">
-
+            <label for="pictureLink">Picture Link</label>
+            <input type="text" th:field="*{pictureLink}" id="pictureLink" class="form-input">
 
             <input class="button" type="submit" value="savePizza">
         </div>
