Order info with address and payment classes included

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,12 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
-<link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
+<link href="../static/css/style.css" rel="stylesheet" th:href="@{css/style.css}" type="text/css">
 
 <head>
     <meta charset="UTF-8">
     <title>PIZZA TIIIIIME!</title>
 </head>
+<body class="center-body">
 <h3>Enter user name and password:</h3>
 <form class="form-input" name='f' th:action="@{/login}" method='POST'>
     <table>
@@ -18,10 +19,6 @@
         <tr>
             <td>Password:</td>
             <td><input type='password' name='password' /></td>
-        </tr>
-        <tr>
-            <td>Remember Me?</td>
-            <td><input type="checkbox" name="remember-me" /></td>
         </tr>
         <tr>
             <td><input name="submit" type="submit" value="submit" /></td>
