--- a/src/main/resources/templates/successPage.html
+++ b/src/main/resources/templates/successPage.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <title>PIZZA TIIIIIME!</title>
 </head>
-<body>
+<body class="center-body">
 
 <img class="top-image" src="../static/images/pizzahot.png" th:src="@{images/pizzahot.png}"/>
 <div class="form-body">
