--- a/src/main/resources/templates/extra-selection.html
+++ b/src/main/resources/templates/extra-selection.html
@@ -20,7 +20,7 @@
             <th:block  th:each="product : ${products} ">
                 <label th:text="${product.name}"></label>
                 <label th:text="${product.price + '$'}"></label>
-                <label th:text="${product.price + product.price % 30 + '$'}"></label>
+                <label th:text="${product.price + product.price / 3 + '$'}"></label>
                     <label>
                         <input type="checkbox" name="id" th:value="${product.id}">
                     </label><Br>
