--- a/src/main/resources/templates/payment-input.html
+++ b/src/main/resources/templates/payment-input.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <title>Enter your Address Details</title>
 </head>
-<body>
+<body class="center-body">
 <img class="top-image" src="../static/images/pizzahot.png" th:src="@{images/pizzahot.png}"/>
 <div class="form-body">
     <div class="menu">
