--- a/src/main/resources/templates/pizzas.html
+++ b/src/main/resources/templates/pizzas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Our Hot Pizzas for you</title>
 </head>
-<body>
+<body class="center-body">
 <div class="form-body">
     <table class="product-container">
         <caption PIZZAS FOR YOU></caption>
